<resources>
    <string name="app_name">Android Learning</string>
    <string name="activity_learn">Activity学习</string>
    <string name="input_info_hint">请输入信息</string>
    <string name="general_jump">一般跳转</string>
    <string name="callback_jump">带回调的跳转</string>
    <string name="android_learn">Android学习</string>
    <string name="intent_learn">Intent学习</string>
    <string name="distinct_intent">显式Intent</string>
    <string name="hide_intent">隐式Intent</string>
    <string name="activity_learn_disp_info">传过来的信息，输入的信息也可返回</string>
    <string name="general_return">普通返回</string>
    <string name="callback_return">带回调的返回</string>
    <string name="ui_component_learn">UI-Component学习</string>
    <string name="phone">电话</string>
    <string name="submit">提交</string>
    <string name="reset">重置</string>
    <string name="interest">爱好：</string>
    <string name="basketball">篮球</string>
    <string name="pingpang">乒乓球</string>
    <string name="confirm">确认</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="sex">性别：</string>
    <string name="update">更新</string>
    <string name="publish">发表</string>
    <string name="share">分享</string>
    <string name="delete">删除</string>
    <string name="loading">加载中……</string>
    <string name="text_view_learn">TextView学习</string>
    <string name="ui_component_learn2">UI-COMPONET2学习</string>
    <string name="liner_layout_learn">LinearLayout学习</string>
    <string name="relative_layout_learn">RelativeLayout学习</string>
    <string name="list_view_learn">ListView学习</string>
    <string name="base_adapter_info">BaseAdapter,所有ListViewAdapter继承于此adapter</string>
    <string name="array_adapter_info">ArrayAdapter</string>
    <string name="array_adapter_learn">ArrayAdapter学习</string>
    <string name="simple_adapter_learn">SimpleAdapter学习</string>
    <string name="base_adapter_learn">BaseAdapter学习</string>
    <string name="name">名字</string>
    <string name="price">价格</string>
</resources>
