<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ydc.androidlearning.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/android_learn"
        android:textColor="@color/red"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_main_intent_learn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intent_learn" />

    <Button
        android:id="@+id/btn_main_activity_learn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_learn" />

    <Button
        android:id="@+id/btn_main_component_learn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ui_component_learn" />

    <Button
        android:id="@+id/btn_main_component2_learn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ui_component_learn2" />


</LinearLayout>
