<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.ydc.androidlearning.activitys.ComponentLearnActivity">


        <TextView
            android:id="@+id/tv_activity_component_learn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:drawableLeft="@android:drawable/sym_def_app_icon"
            android:gravity="bottom"
            android:text="@string/text_view_learn"
            android:textColor="@color/red" />

        <TextView
            android:id="@+id/tv_phone_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_activity_component_learn"
            android:layout_marginTop="10dp"
            android:height="43dp"
            android:gravity="center"
            android:text="@string/phone" />

        <EditText
            android:id="@+id/et_activity_comp_learn_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_activity_component_learn"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/tv_phone_text"
            android:background="@drawable/edit_text_shap"
            android:hint="请输入手机号"
            android:inputType="phone" />

        <TextView
            android:id="@+id/tv_pwd_text"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_below="@id/et_activity_comp_learn_phone"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="密码" />

        <EditText
            android:id="@+id/et_activity_comp_learn_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_activity_comp_learn_phone"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/tv_pwd_text"
            android:background="@drawable/edit_text_shap"
            android:hint="请输入密码"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_phone_pwd_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/et_activity_comp_learn_pwd"
            android:onClick="submitPhoneAndPwd"
            android:text="@string/submit" />

        <Button
            android:id="@+id/btn_phone_pwd_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_activity_comp_learn_pwd"
            android:layout_toLeftOf="@id/btn_phone_pwd_submit"
            android:onClick="resetPhoneAndPwd"
            android:text="@string/reset" />

        <LinearLayout
            android:id="@+id/star_liner_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_phone_pwd_submit"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="clickStar"
                android:src="@android:drawable/star_big_on" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_phone_pwd_reset"
                android:onClick="clickStar"
                android:src="@android:drawable/star_big_on" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_phone_pwd_reset"
                android:onClick="clickStar"
                android:src="@android:drawable/star_big_on" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_phone_pwd_reset"
                android:onClick="clickStar"
                android:src="@android:drawable/star_big_on" />

        </LinearLayout>

        <ImageView
            android:id="@+id/btn_displyVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/star_liner_layout"
            android:background="@android:drawable/alert_dark_frame"
            android:onClick="displyVideo"
            android:src="@android:drawable/ic_media_play" />

        <LinearLayout
            android:id="@+id/linear_layout_interest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_displyVideo"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/interest" />

            <CheckBox
                android:id="@+id/cb_interest_foot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="足球" />

            <CheckBox
                android:id="@+id/cb_interest_basket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basketball" />

            <CheckBox
                android:id="@+id/cb_interest_pingpang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pingpang" />

            <Button
                android:id="@+id/btn_interest_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="confirmInterest"
                android:text="@string/confirm" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/rg_component_learn_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_layout_interest"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/man" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/woman" />

        </RadioGroup>

        <TextView
            android:id="@+id/tv_activity_component_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rg_component_learn_sex"
            android:text="你选择的性别是：" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_activity_component_sex"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="上下文菜单"
                android:textColor="@color/red" />

            <Button
                android:id="@+id/btn_main_component_learn_contextMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="长按显示上下文菜单" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="progressbar学习"
                android:textColor="@color/red" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ProgressBar
                    android:id="@+id/pb_loading"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/pb_horizontal_loading"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="30" />

            <SeekBar
                android:id="@+id/sb_change_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout"
                android:layout_centerHorizontal="true" />

            <Button
                android:id="@+id/btn_general_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="一般对话框" />

            <Button
                android:id="@+id/btn_single_select_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="带单选的对话框" />

            <Button
                android:id="@+id/btn_progress_bar_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="带转圈进度条的对话框" />

            <Button
                android:id="@+id/btn_progress_bar1_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="带横向进度条的对话框" />

            <Button
                android:id="@+id/btn_year_select_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="带年月选择的对话框" />

            <EditText
                android:id="@+id/et_component_learn_date_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_shap" />

            <Button
                android:id="@+id/btn_time_select_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="带日期选择的对话框" />

            <EditText
                android:id="@+id/et_component_learn_time_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_shap" />

            <Button
                android:id="@+id/btn_custom_layout_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="带自定义布局的对话框" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
